# kafka-connect-wasm-transformer

./: .gitignore  README.adoc  build.gradle  gradle.properties  pom.xml
.github/: dependabot.yml
.github/workflows/: build-main.yml  build-pr.yml
gradle/: libs.versions.toml
src/main/java/com/github/lburgazzoli/kafka/transformer/wasm/: WasmFunction.java  WasmFunctionException.java  WasmRecord.java  WasmRecordConverter.java  WasmTransformer.java
src/main/rust/: Cargo.toml
src/main/rust/src/: lib.rs
src/test/groovy/com/github/lburgazzoli/kafka/support/: EmbeddedKafkaConnect.groovy  EmbeddedKafkaContainer.groovy
src/test/groovy/com/github/lburgazzoli/kafka/transformer/wasm/: ConnectTransformerTest.groovy  WasmTransformerTest.groovy
src/test/groovy/com/github/lburgazzoli/kafka/transformer/wasm/support/: ConnectMain.groovy  EmbeddedKafkaConnect.groovy  WasmTransformerTestSpec.groovy
src/test/resources/: functions.wasm  log4j2-test.xml
src/test/rust/: Cargo.toml  functions.rs
