[package]
name    = "functions"
version = "0.1.0"
authors = ["lburgazzoli@gmail.com"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "functions.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.7"
base64-serde = "0.7.0"

# Below settings dramatically reduce wasm output size
# See https://rustwasm.github.io/book/reference/code-size.html#optimizing-builds-for-code-sizewasm-opt -Oz -o
# See https://doc.rust-lang.org/cargo/reference/profiles.html#codegen-units
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1